# pico-dco

./: .gitignore  CMakeLists.txt  README.md  pico-dco.c  pico-dco.pio  tusb_config.h  usb_descriptors.c
kicad/: Pico-DCO-1.sch  fp-lib-table  pico-dco-cache.lib  pico-dco.kicad_pcb  pico-dco.pro  pico-dco.sch  sym-lib-table
kicad/plots/: pico-dco-B_Cu.gbr  pico-dco-B_Mask.gbr  pico-dco-B_Paste.gbr  pico-dco-B_SilkS.gbr  pico-dco-Edge_Cuts.gbr  pico-dco-F_Cu.gbr  pico-dco-F_Mask.gbr  pico-dco-F_Paste.gbr  pico-dco-F_SilkS.gbr  pico-dco-NPTH.drl  pico-dco-PTH.drl  pico-dco-job.gbrjob
